<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensorGraph</string>
    <string name="title_activity_main">SensorGraph</string>
    <string name="action_settings">Settings</string>
    <string name="label_sensors">Sensors:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filler_no_sensor_selected">No Sensor Selected</string>
    <string name="label_sensor_name">Name:</string>
    <string name="filler_sensor_name">MPL magnetic field</string>
    <string name="label_sensor_type">Type:</string>
    <string name="filler_sensor_type">Magnetic Field</string>
    <string name="filler_sensor_vendor">Invensense</string>
    <string name="filler_sensor_version">[Version: 1]</string>
    <string name="label_sensor_vendor">Vendor:</string>
    <string name="label_accuracy">Accuracy:</string>
    <string name="filler_accuracy">N/A</string>
    <string name="label_last_values">Last Values:</string>
    <string name="filler_last_values">None</string>
    <string name="label_auto_scroll">Auto Scroll Graph</string>
    <string name="label_show_legend">Show Legend</string>
    <string name="label_upload">Upload</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="label_toggle_sensor">Toggle Sensor:</string>
    <string name="menu_upload">Upload</string>
    <string name="title_activity_sensor_detail">Sensor Details</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_toggle_logging">Toggle Logging</string>

</resources>