<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/label_sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_sensor_name"
        android:textAppearance="@style/Text.Label" />
    
    <TextView
        android:id="@+id/text_sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_sensor_name"
        android:layout_toRightOf="@+id/label_sensor_name"
        android:text="@string/filler_sensor_name"
        android:textAppearance="@style/Text.Default" />

    <TextView
        android:id="@+id/label_sensor_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sensor_type"
        android:layout_below="@+id/label_sensor_name"
        android:layout_alignRight="@+id/label_sensor_name"
        android:textAppearance="@style/Text.Label" />
    
    <TextView
        android:id="@+id/text_sensor_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_sensor_type"
        android:layout_toRightOf="@+id/label_sensor_type"
        android:layout_alignLeft="@+id/text_sensor_name"
        android:text="@string/filler_sensor_type"
        android:textAppearance="@style/Text.Default" />
    
     <TextView
        android:id="@+id/label_sensor_vendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sensor_vendor"
        android:layout_below="@+id/label_sensor_type"
        android:layout_alignRight="@+id/label_sensor_type"
        android:textAppearance="@style/Text.Label" />
    
    <TextView
        android:id="@+id/text_sensor_vendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_sensor_vendor"
        android:layout_toRightOf="@+id/label_sensor_vendor"
        android:layout_alignLeft="@+id/text_sensor_type"
        android:text="@string/filler_sensor_vendor"
        android:textAppearance="@style/Text.Default" />
    
    <TextView
        android:id="@+id/text_sensor_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_sensor_vendor"
        android:layout_toRightOf="@+id/text_sensor_vendor"
        android:layout_marginLeft="4dp"
        android:text="@string/filler_sensor_version"
        android:textAppearance="@style/Text.Default" />
    
    <TextView
        android:id="@+id/label_sensor_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_accuracy"
        android:layout_below="@+id/label_sensor_vendor"
        android:layout_alignRight="@+id/label_sensor_vendor"
        android:textAppearance="@style/Text.Label" />
    
    <TextView
        android:id="@+id/text_sensor_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_sensor_accuracy"
        android:layout_toRightOf="@+id/label_sensor_accuracy"
        android:layout_alignLeft="@+id/text_sensor_vendor"
        android:text="@string/filler_accuracy"
        android:textAppearance="@style/Text.Default" />
    
     <TextView
         android:id="@+id/label_sensor_last_values"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/label_sensor_accuracy"
         android:layout_below="@+id/label_sensor_accuracy"
         android:layout_marginBottom="20dp"
         android:text="@string/label_last_values"
         android:textAppearance="@style/Text.Label" />
    
    <TextView
        android:id="@+id/text_sensor_last_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_sensor_last_values"
        android:layout_alignLeft="@+id/text_sensor_accuracy"
        android:layout_toRightOf="@+id/label_sensor_last_values"
        android:text="@string/filler_last_values"
        android:textAppearance="@style/Text.Default" />

    <CheckBox
        android:id="@+id/check_use_autoscroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:checked="true"
        android:text="@string/label_auto_scroll" />

    <ToggleButton
        android:id="@+id/toggle_show_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_use_autoscroll"
        android:layout_toRightOf="@+id/label_show_legend" />

    <TextView
        android:id="@+id/label_show_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggle_show_legend"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp"
        android:text="@string/label_show_legend"
        android:textAppearance="@style/Text.Label" />
    
    <FrameLayout
        android:id="@+id/layout_graph_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/label_sensor_last_values" >

    </FrameLayout>

    
</RelativeLayout>